--- a/styles/style.css
+++ b/styles/style.css
@@ -40,25 +40,96 @@ header{
 /* heades styles ends */
 
 /* mains sections styles starts */
+.main-section {
+    display: flex;
+    justify-content: space-around;
+     flex-grow: 1; 
+}
 
 .side-bar{
     background-color: black;
     border-radius: 10px;
-    padding: 50px 50px;
     display: flex;
-     flex-direction: column; 
-     justify-content: center;
-     align-items: center;
-}
+    flex-direction: column; 
+    align-items: center;
+    padding-top: 20px;
+   
+     
+} 
 .side-bar a{
     box-sizing: border-box;
     text-decoration: none;
     background-color: aliceblue;
     border-radius: 10px;
-    
+    color: black;
     width: 200px;
     height: 40px;
     text-align: center;
     display: block;
     margin-top: 10px;
 }
+#link-3{
+    background-color:rgba(221, 0, 0, 1);
+    color: white;
+
+}
+
+.display-player{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-row-gap: 2em;
+    margin-left: 35px;
+}
+.btn{
+    font-size: 1em;
+    background-color: white;
+    border-radius: 5px;
+    border: 2px solid gainsboro;
+}
+.icons{
+    display: flex;
+   
+}
+.icon-clock{
+    display: flex;
+    align-items: center;
+}
+.icon-sms{
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+ .item-1{
+    flex-basis: 321px;
+} 
+
+/* mains sections styles starts */
+
+/* footers stylers stars */
+footer{
+    background-color: black;
+    margin-top: 100px;
+    padding-top: 100px;
+}
+#goal{
+    font-size: 2em;
+    padding-bottom: 50px;
+}
+.foot{
+    text-align: center;
+    margin-left: 150px;
+    margin-right: 150px;
+    color: aliceblue;
+}
+hr{
+    color: rgba(185, 185, 185, 1);
+}
+.items{
+    display: flex;
+    justify-content: space-around;
+    color: rgba(185, 185, 185, 1);
+    margin-left: 250px;
+    margin-right: 250px;
+    padding-bottom: 100px;
+}
+/* footers stylers ends */
