--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ header{
     flex-direction: column; 
     align-items: center;
     padding-top: 20px;
+  
    
      
 } 
@@ -68,11 +69,11 @@ header{
     display: block;
     margin-top: 10px;
 }
-#link-3{
+/* #link-3{
     background-color:rgba(221, 0, 0, 1);
     color: white;
 
-}
+} */
 
 .display-player{
     display: grid;
@@ -85,6 +86,7 @@ header{
     background-color: white;
     border-radius: 5px;
     border: 2px solid gainsboro;
+    padding: 5px;
 }
 .icons{
     display: flex;
@@ -108,8 +110,9 @@ header{
 /* footers stylers stars */
 footer{
     background-color: black;
-    margin-top: 100px;
-    padding-top: 100px;
+    margin-top: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 #goal{
     font-size: 2em;
@@ -132,6 +135,19 @@ hr{
     margin-right: 250px;
     padding-bottom: 100px;
 }
+.social-icon{
+    
+    text-align: center;
+    font-size: 2em;
+   
+    
+}
+.social-icon a{
+    background-color: aliceblue;
+    padding: 10px;
+    border-radius: 5px;
+   
+}
 /* footers stylers ends */
 
 /* match styles startss */
@@ -148,5 +164,23 @@ hr{
 }
 .img-2{
     margin-left: 10px;
+}
+
+/* media quary */
+
+/* for mobiles */
+@media screen and (min-width:320px) and (max-width: 480px) {
+    header{
+        width: 100%;
+        flex-direction: column;
+    }
+    .main-section{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .display-player{
+        grid-template-columns: repeat(1,1fr);
+    }
 }
 
