--- a/styles/style.css
+++ b/styles/style.css
@@ -182,5 +182,39 @@ hr{
     .display-player{
         grid-template-columns: repeat(1,1fr);
     }
+    footer{
+        width: 100%;
+    }
+    .items{
+        flex-direction: column;
+    }
+}
+
+/* for tablet */
+@media screen and (min-width:481px) and (max-width:768px) {
+    .main-section{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .side-bar{
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .display-player {
+        grid-template-columns: repeat(2, 1fr);
+     }
+
+    footer {
+         width: 100%;
+     }
+    
+     .items {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+     }
+    
 }
 
