--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,14 @@ header{
 .header-title{
     font-size: 5em;
 }
+
+#watch-live:hover{
+background-color: aqua;
+color: black;
+transform: scale(.25);
+
+}
+
 .header-details{
     width: 50%;
 }
@@ -28,6 +36,8 @@ header{
     height: 56px;
     border-radius: 5px;
     padding: 16px 25px;
+    
+    transition: width 5s linear 2s;
     
 }
 .header-img{
@@ -43,7 +53,7 @@ header{
 .main-section {
     display: flex;
     justify-content: space-around;
-     flex-grow: 1; 
+    flex-grow: 1; 
 }
 
 .side-bar{
@@ -105,7 +115,20 @@ header{
     flex-basis: 321px;
 } 
 
-/* mains sections styles starts */
+/* mains sections styles end */
+.view-all{
+    visibility: hidden;
+    text-align: center;
+    margin-top: 20px;
+}
+.view-btn{
+    background-color: rgba(221, 0, 0, 1);
+    color: white;
+    width: 131px;
+    height: 47px;
+    border: none;
+    border-radius: 5px;
+}
 
 /* footers stylers stars */
 footer{
@@ -214,6 +237,9 @@ hr{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
+     }
+     .view-all{
+        visibility: visible;
      }
     
 }
