--- a/styles/style.css
+++ b/styles/style.css
@@ -197,6 +197,9 @@ hr{
         width: 100%;
         flex-direction: column;
     }
+    .header-img{
+        margin-top: 50px;
+    }
     .main-section{
         width: 100%;
         display: flex;
@@ -204,6 +207,7 @@ hr{
     }
     .display-player{
         grid-template-columns: repeat(1,1fr);
+        
     }
     footer{
         width: 100%;
@@ -219,6 +223,7 @@ hr{
         width: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
     }
     .side-bar{
         flex-direction: row;
