--- a/styles/style.css
+++ b/styles/style.css
@@ -214,6 +214,9 @@ hr{
     }
     .items{
         flex-direction: column;
+        text-align: center;
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 
